# webgpu-tinkering

./: Cargo.toml
models/: cube.mtl
src/: egui_app.rs  main.rs  models.rs  renderer.rs  shader.wgsl  winit_app.rs
