[package]
name = "webgpu-tinkering"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.22.0"
eframe = { version = "0.31.1", default-features = false, features = ["wgpu"] }
egui = "0.31.1"
egui-wgpu = "0.31.1"
env_logger = "0.11.8"
image = { version = "0.25.6", default-features = false, features = ["png"] }
indexmap = "2.9.0"
itertools = "0.14.0"
log = "0.4.27"
nalgebra = "0.33.2"
pollster = "0.4.0"
tobj = { version = "4.0.3", features = ["log"] }
wgpu = "24.0.3"
winit = { version = "0.30.9", default-features = false }
